resolve some issues: text and links of popup about cookies. skip border of the music player component on mobile

--- a/src/assets/styles/navbar.css
+++ b/src/assets/styles/navbar.css
@@ -33,6 +33,10 @@
   padding-bottom: 0;
 }
 
+.musicDiv {
+  border: 0px;
+}
+
 .music button {
   border: 1px solid var(--second-color);
   background: var(--navbar-hover-color);
